assets/style.css
/* ... */
/*TABLET VERSION*/

@media (min-width: 768px){

  .navbar{
    display: block;
    padding-top: 0px;
    padding-bottom: 0px;
  }

  .container{
    padding: 0px;
  }

  .nav-tab-desktop-hidden-menu{
    display: none;
    padding-bottom: 0px;
  }

  .nav-mobile-hidden-menu{
    display: flex;
    align-items: center;
    justify-content: center;
  }

  .navbar-nav{
    display: flex;
    align-items: baseline;
    flex-wrap: wrap;
    justify-content: space-evenly;
    flex-basis: 750px;
    background-color: #DF621B;
    margin-bottom: 0px;
    margin-right: 10px;
    padding-right: 0px;
    border-radius: 4px;
  }

  #navbar_supported_content{
    top: 30px;
    left: 135px;
    width: 630px;
  }

  .nav-menu{
    font-size: 13px;
    padding-bottom: 5px;
    padding-left: 7px;
    padding-right: 7px;
  }

  ul li a{
    color: #FFFFFF;
    padding: 0px;
    margin: 0px;
    font-weight: bold;
  }
  
  ul li{
    margin-left: 10px;
    margin-right: 10px;
  }

  #navbar_logo {
    font-size: 50px;
    height: 60px;
    margin-bottom: 20px;
    margin-top: 20px;
    padding-left: 0px;
    margin-left: 25px;
    left: 30px;
  }


  /*banner*/
  .banner-section{
    padding-bottom: 0px;
    margin-left: -25px;
    margin-right: -25px;
  }

  #banner_pic_section{
    display: flex;
    justify-content: flex-end;
  }

  #banner_pic{
    padding-left: 50px;
    height: 300px;

  }
  
  #banner_quote{
    padding-left: 60px;
    padding-right: 10px;
    margin-right: 0px;
    margin-top: 20px;
  }
  
  #first_large_text{
    font-size: 45px;
  }
  
  .large-text{
    font-size: 45px;
    padding-left: 14px;
  }

  .small-text{
    font-size: 40px;
  }

.product{
  height: 120px;
  width: 120px;
  margin-left: 40px;
}

.product-header{
  font-size: 20px;
}

.product-quote{
  font-size: 12px;
  padding-bottom :15px;
}

 /*product 1*/
.product-1-section{
  border-bottom: 6px solid transparent;
  border-top: 20px solid transparent;
  border-right: 10px solid transparent;
  border-left: 10px solid transparent;
}

/*product 2*/
.product-2-section{
  border-bottom: 6px solid transparent;
  border-top: 20px solid transparent;
  border-right: 10px solid transparent;
  border-left: 10px solid transparent;
}

/*product 3*/
.product-3-section{
  border-bottom: 6px solid transparent;
  border-top: 20px solid transparent;
  border-left: 10px solid transparent;
  border-right: 10px solid transparent;
}

/*section before footer*/

#section_before_footer{
  margin-top: 50px;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  padding-bottom: 0px;
  padding-left: 3px;
  height: 280px;
}

#text_before_footer{
  display: flex;
  flex-direction: column;
  align-items: center;
  padding-right: 0px;
  padding-left: 0px;
}

#pet_heading{
  font-size: 34px;
  line-height: 1.3;
  padding-top: 0px;
  display: flex;
  justify-content: left;
  text-align: left;
  margin-bottom: 15px;
  padding-right: 0px;
  margin-left: 0px;
  padding-inline-start: 0px;
}

#pet_content{
  font-size: 10px;
  padding-top: 5px;
  margin-top: 5px;
  margin-bottom: 10px;
  line-height: 1.9; 
  font-family: sans-serif;
  display: flex;
  justify-content: left;
  text-align: left;
  padding-left: 12px;
  padding-right: 5px;
}

#read_more_button{
  font-size: 11px;
  padding: 8px 18px;
  border-radius: 5px;
  font-family: sans-serif;
  border: none;
}

#button_container{
  display: flex;
  justify-content:left;
  padding-top: 0px;
  margin-top: 0px;
  margin-bottom: 10px;
  margin-left: -260px;
}

/*picture above footer*/
  
#above_footer_container{
  display: flex;
  justify-content: center;
  position: relative;
  bottom: 30px;
  padding-bottom: 20px;
  padding-left: 0px;
  padding-top: 0px;
  padding-right: 0px;
}

#image_above_footer{
  height: 280px;
}

/*footer*/
footer{
  background-color: #f5f5f5;
  margin-top: 0px;
  padding-top: 0px;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
}

.footer-row{
  margin-left: -25px;
  margin-right: -25px;
}

#logo_above_footer{
  display: flex;
  justify-content: center;
  width: 100%;
  padding-top: 35px;
}

#last_logo{
  height: 70px;
}

#address{
  display: flex;
  flex-direction: row;
  text-align: center;
  font-size: 17px;
  margin-top: 30px;
  line-height: 1.3;
  margin-bottom: 20px;
}

#address_part_one{
  padding-bottom: 0px;
  margin-bottom: 0px;
  margin-top: 0px;
  padding-top: 0px;
  margin-right: 0px;
  padding-right: 20px;
  padding-left: 160px;
  text-align: left;
}

#address_part_two{
  padding-top: 0px;
  padding-bottom: 0px;
  margin-bottom: 0px;
  margin-top: 0px;
  padding-right: 0px;
  padding-left: 35px;
  margin-right:0px;
  text-align: left;
}

#address_part_two span{
  width: 300px;
}

#copyright{
  display: flex;
  justify-content: center;
  font-size: 20px;
  padding: 10px 0px;
  color: #FFFFFF;
  margin-top: 15px;
  width: 100%;
}
}
/* ... */

